--- a/task/requirements.txt
+++ b/task/requirements.txt
@@ -5,6 +5,7 @@ djangorestframework==3.13.1
 djangorestframework-simplejwt==5.0.0
 flake8==4.0.1
 mccabe==0.6.1
+django-filter==21.1
 psycopg2-binary==2.9.3
 pycodestyle==2.8.0
 pyflakes==2.4.0
